css/widget.css
/* ... */
.btn-group-vertical .btn:first-child:not(:last-child) {
  margin-top: -1px;
  margin-left: -0px;
  border-top-left-radius: var(--rounded-btn, 0.5rem);
  border-top-right-radius: var(--rounded-btn, 0.5rem);
  border-bottom-left-radius: 0;
  border-bottom-right-radius: 0;
}
.btn-group-vertical .btn:last-child:not(:first-child) {
  border-top-left-radius: 0;
  border-top-right-radius: 0;
  border-bottom-left-radius: var(--rounded-btn, 0.5rem);
  border-bottom-right-radius: var(--rounded-btn, 0.5rem);
}
.divider-horizontal {
  margin-top: 0;
  margin-bottom: 0;
  margin-left: 1rem;
  margin-right: 1rem;
  height: auto;
  width: 1rem;
}
.join.join-vertical > :where(*:not(:first-child)) {
  margin-left: 0;
  margin-right: 0;
  margin-top: -1px;
}
.join.join-horizontal > :where(*:not(:first-child)) {
  margin-top: 0;
  margin-bottom: 0;
  margin-left: -1px;
}
.table-sm :not(thead):not(tfoot) tr {
  font-size: 0.875rem;
  line-height: 1.25rem;
}
.table-sm :where(th, td) {
  padding: 0.5rem 0.75rem;
}
.btn-outline {
  border-width: 2px;
}
.focus {
  --tw-bg-opacity: 1 !important;
  background-color: hsl(var(--p) / var(--tw-bg-opacity)) !important;
  --tw-text-opacity: 1;
  color: hsl(var(--b1) / var(--tw-text-opacity));
}
.focus:hover {
  --tw-bg-opacity: 1;
  background-color: hsl(var(--pf) / var(--tw-bg-opacity));
}
.focus:focus {
  --tw-bg-opacity: 1;
  background-color: hsl(var(--pf) / var(--tw-bg-opacity));
}
.btn-ghost:disabled {
  background-color: transparent;
}
.btn-outline.btn-error:hover,
.btn-outline.btn-success:hover,
.btn-outline.btn-info:hover,
.btn-outline.btn-warning:hover,
.btn-error,
.btn-info,
.btn-success,
.btn-warning {
  --tw-text-opacity: 1;
  color: hsl(var(--b1) / var(--tw-text-opacity));
}
.btn-error:hover:not(.btn-outline),
.btn-error.btn-active:not(.btn-outline),
.btn-info:hover:not(.btn-outline),
.btn-info.btn-active:not(.btn-outline),
.btn-success:hover:not(.btn-outline),
.btn-success.btn-active:not(.btn-outline),
.btn-warning:hover:not(.btn-outline),
.btn-warning.btn-active:not(.btn-outline) {
  --tw-brightness: brightness(0.8);
  filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast)
    var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate)
    var(--tw-sepia) var(--tw-drop-shadow);
}
.select,
.input,
.textarea {
  overflow: hidden;
  border-width: 0px;
  background-color: transparent;
  outline-style: solid;
  outline-width: 2px;
  outline-offset: 2px;
  --tw-ring-offset-shadow: var(--tw-ring-inset) 0 0 0
    var(--tw-ring-offset-width) var(--tw-ring-offset-color) !important;
  --tw-ring-shadow: var(--tw-ring-inset) 0 0 0
    calc(0px + var(--tw-ring-offset-width)) var(--tw-ring-color) !important;
  box-shadow: var(--tw-ring-offset-shadow), var(--tw-ring-shadow),
    var(--tw-shadow, 0 0 #0000) !important;
  transition-property: all !important;
  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1) !important;
  transition-duration: 75ms !important;
}
.select:focus,
.input:focus,
.textarea:focus {
  outline-color: hsl(var(--p) / 1);
}
.toggle {
  border-width: 2px !important;
  background-image: none !important;
}
@media (hover: hover) {
  .chat-bubble a:hover {
    --tw-text-opacity: 1 !important;
    color: hsl(var(--in) / var(--tw-text-opacity)) !important;
  }
}
.chat-bubble a {
  cursor: pointer !important;
  text-decoration-line: underline !important;
  --tw-text-opacity: 1 !important;
  color: hsl(var(--in) / var(--tw-text-opacity)) !important;
}
.chat-bubble a:focus {
  outline: 2px solid transparent !important;
  outline-offset: 2px !important;
}
.chat-bubble a:focus-visible {
  outline: 2px solid currentColor !important;
  outline-offset: 2px !important;
}
@media (hover: hover) {
  .chat-bubble table tr.hover:hover,
  .chat-bubble table tr.hover:nth-child(even):hover {
    --tw-bg-opacity: 1 !important;
    background-color: hsl(var(--b2) / var(--tw-bg-opacity)) !important;
  }
}
.chat-bubble table {
  position: relative !important;
  width: 100% !important;
  text-align: left !important;
  font-size: 0.875rem !important;
  line-height: 1.25rem !important;
  border-radius: var(--rounded-box, 1rem) !important;
}
.chat-bubble table :where(.table-pin-rows thead tr) {
  position: sticky !important;
  top: 0px !important;
  z-index: 1 !important;
  --tw-bg-opacity: 1 !important;
  background-color: hsl(var(--b1) / var(--tw-bg-opacity)) !important;
}
.chat-bubble table :where(.table-pin-rows tfoot tr) {
  position: sticky !important;
  bottom: 0px !important;
  z-index: 1 !important;
  --tw-bg-opacity: 1 !important;
  background-color: hsl(var(--b1) / var(--tw-bg-opacity)) !important;
}
.chat-bubble table :where(.table-pin-cols tr th) {
  position: sticky !important;
  left: 0px !important;
  right: 0px !important;
  --tw-bg-opacity: 1 !important;
  background-color: hsl(var(--b1) / var(--tw-bg-opacity)) !important;
}
.chat-bubble table :where(th, td) {
  padding: 0.75rem 1rem !important;
  vertical-align: middle !important;
}
.chat-bubble table tr.active,
.chat-bubble table tr.active:nth-child(even) {
  --tw-bg-opacity: 1 !important;
  background-color: hsl(var(--b2) / var(--tw-bg-opacity)) !important;
}
.chat-bubble table :where(thead, tbody) :where(tr:not(:last-child)),
.chat-bubble table :where(thead, tbody) :where(tr:first-child:last-child) {
  border-bottom-width: 1px !important;
  --tw-border-opacity: 1 !important;
  border-bottom-color: hsl(var(--b2) / var(--tw-border-opacity)) !important;
}
.chat-bubble table :where(thead, tfoot) {
  white-space: nowrap !important;
  font-size: 0.75rem !important;
  line-height: 1rem !important;
  font-weight: 700 !important;
  color: hsl(var(--bc) / 0.6) !important;
}
.chat-bubble table :not(thead):not(tfoot) tr {
  font-size: 0.75rem !important;
  line-height: 1rem !important;
}
.chat-bubble table :where(th, td) {
  padding: 0.25rem 0.5rem !important;
}
.chat-bubble table {
  display: table !important;
}
/* ... */

